Dom renders board

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,11 @@
     <script  src="./shipFactory.js" type="module" defer></script>
     <script  src="./player.js" type="module" defer></script>
     <script  src="./gameLoop.js" type="module" defer></script>
-    <script  src="./display.js" type="module" defer></script>
     <script  src="./dom.js" type="module" defer></script>
     <script  src="./index.js" type="module" defer></script>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./meyer_reset.css">
 <body>
-    <body>
         <header class="header">
             <h1 class="title">Battleship Game - TDD</h1>
         </header>
@@ -34,12 +32,12 @@
             </section>
             <section class="game-board">
                 <div class="game-container">
-                    <div class="player-board">
+                    <div class="board-container player">
                         <h3>Player's Board</h3>
                         <section class="player-board">
                         </section>
                     </div>
-                    <div class="opponent-board">
+                    <div class="board-container computer">
                         <h3>Opponent's Board</h3>
                         <section class="computer-board">
                         </section>
@@ -48,7 +46,7 @@
         </main>
 
         <footer class="footer">
-            <p>&copy; 2023 - JustWaveThings</p>
+
         </footer>
 </body>
 </html>
