--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,12 @@
         </header>
 
         <main class="main">
-            <section class="player-setup">
-                <h2>Player Setup</h2>
+            <section class="instructions-container">
                 <form id="ship-placement-form">
                     <h2>Ship Placement</h2>
 
 
-    <button type="submit">Submit</button>
+    <button type="button" class="next-ship-button" style="display: none"; >Next</button>
 </form>
     </div>
             </section>
