Update ship placement logic to fix edge bug

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <div class="instructions">
             <h2>Ship Placement</h2>
             <section class="instructions-container"></section>
-            <button type="button" class="next-ship-button">Next</button>
+            <button type="button" class="next-ship-button" style="display: none;">Next</button>
         </div>
         <section class="game-board">
             <div class="game-container">
