--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship TDD</title>
 
-    <script src="./gameboard.js" type="module" defer></script>
-    <script src="./shipFactory.js" type="module" defer></script>
-    <script src="./player.js" type="module" defer></script>
-    <script src="./gameLoop.js" type="module" defer></script>
-    <script src="./dom.js" type="module" defer></script>
-    <script src="./index.js" type="module" defer></script>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./meyer_reset.css">
+    <script src="./src/gameboard.js" type="module" defer></script>
+    <script src="./src/shipFactory.js" type="module" defer></script>
+    <script src="./src/player.js" type="module" defer></script>
+    <script src="./src/gameLoop.js" type="module" defer></script>
+    <script src="./src/dom.js" type="module" defer></script>
+    <script src="./src/index.js" type="module" defer></script>
+    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/meyer_reset.css">
 
 <body>
     <header class="header">
